Fix align items in App

--- a/src/stylesheets/_App.scss
+++ b/src/stylesheets/_App.scss
@@ -4,5 +4,6 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   color: whitesmoke;
 }
